<resources>
    <string name="app_name">Calorie Tracker Assignment</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>

    <string name="menu_home">Home</string>
    <string name="menu_steps">Add Today\'s Steps</string>
    <string name="menu_diet">My Diet Screen</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_user_options">UserOptions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height_in_cm">Height (in cm)</string>
    <string name="password">Password</string>
    <string name="weight_in_kg">Weight (in kg)</string>

    <!-- For level of activity Spinner in Registration-->
    <string name="activity_level_1">1</string>
    <string name="activity_level_2">2</string>
    <string name="activity_level_3">3</string>
    <string name="activity_level_4">4</string>
    <string name="activity_level_5">5</string>
    <string name="level_of_activity">Level Of Activity</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="steps_per_mile">Steps Per Mile</string>
    <string name="postcode">Post Code</string>
    <string name="welcome_message">Welcome to Calorie Tracker App</string>
    <string name="current_date">Date Placeholder</string>
    <string name="food_category">Select Food Category</string>
    <string name="food_tem">Select Food</string>
    <string name="food_item">Select Food</string>
    <string name="menu_map">Find Nearby Parks</string>
    <string name="title_activity_maps">Map</string>
    <string name="parks_nearby">Parks Near You!</string>
    <string name="email_this_is_your_login_id">Email (This is your login id)</string>
    <string name="add_your_steps_for_today">Add your steps</string>
    <string name="add_steps">Add Steps</string>
    <string name="track_your_calories">Track Your Calories</string>
    <string name="set_from_dashboard">No Calories set today. Set it from the Dashboard!</string>
    <string name="no_food_consumption">You haven\'t consumed any food yet. Please go to the Daily Diet Screen to track your food consumption</string>
    <string name="no_calories_burnt">You haven\'t burnt any calories today. You can do it!</string>
    <string name="view_reports">View Your Reports</string>
</resources>
